--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <script src="./assets/script/script.js" defer></script>
   <title>Piano</title>
 </head>
 <body>
@@ -24,17 +24,17 @@
     <div data-note="B" class="key white"></div>
   </div>
 
-  <audio id="C" src="notes/C.mp3"></audio>
-  <audio id="Db" src="notes/Db.mp3"></audio>
-  <audio id="D" src="notes/D.mp3"></audio>
-  <audio id="Eb" src="notes/Eb.mp3"></audio>
-  <audio id="E" src="notes/E.mp3"></audio>
-  <audio id="F" src="notes/F.mp3"></audio>
-  <audio id="Gb" src="notes/Gb.mp3"></audio>
-  <audio id="G" src="notes/G.mp3"></audio>
-  <audio id="Ab" src="notes/Ab.mp3"></audio>
-  <audio id="A" src="notes/A.mp3"></audio>
-  <audio id="Bb" src="notes/Bb.mp3"></audio>
-  <audio id="B" src="notes/B.mp3"></audio>
+  <audio id="C" src="./assets/notes/C.mp3"></audio>
+  <audio id="Db" src="./assets/notes/Db.mp3"></audio>
+  <audio id="D" src="./assets/notes/D.mp3"></audio>
+  <audio id="Eb" src="./assets/notes/Eb.mp3"></audio>
+  <audio id="E" src="./assets/notes/E.mp3"></audio>
+  <audio id="F" src="./assets/notes/F.mp3"></audio>
+  <audio id="Gb" src="./assets/notes/Gb.mp3"></audio>
+  <audio id="G" src="./assets/notes/G.mp3"></audio>
+  <audio id="Ab" src="./assets/notes/Ab.mp3"></audio>
+  <audio id="A" src="./assets/notes/A.mp3"></audio>
+  <audio id="Bb" src="./assets/notes/Bb.mp3"></audio>
+  <audio id="B" src="./assets/notes/B.mp3"></audio>
 </body>
 </html>
