--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="./assets/script/script.js" defer></script>
-  <title>Piano</title>
+  <title>Piano Test</title>
+  
 </head>
 <body>
+
   <div class="piano">
     <div data-note="C" class="key white"></div>
     <div data-note="Db" class="key black"></div>
